--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,7 @@
 # config/routes.yaml
-
-# the "app_lucky_number" route name is not important yet
-#app_lucky_number:
-#  path: /api/number
-#  controller: App\Controller\APIController::number
+spa:
+  path: /
+  controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController
+  defaults:
+    path: '/index.html'
+    permanent: true
