--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.30",
@@ -24,7 +23,8 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "heroku/heroku-buildpack-php": "*"
+        "heroku/heroku-buildpack-php": "*",
+        "symfony/dotenv": "5.2.*"
     },
     "config": {
         "optimize-autoloader": true,
