--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,8 +1,7 @@
 doctrine:
     dbal:
         override_url: true
-        #url: '%env(resolve:DATABASE_URL)%'
-        url: 'postgresql://postgres:postgres@127.0.0.1:5432/dataviewer?serverVersion=11&charset=utf8'
+        url: '%env(resolve:DATABASE_URL)%'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
