--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.30",
@@ -23,8 +24,7 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "heroku/heroku-buildpack-php": "*",
-        "symfony/dotenv": "5.2.*"
+        "heroku/heroku-buildpack-php": "*"
     },
     "config": {
         "optimize-autoloader": true,
