Update Composer dependencies.

--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
+        "heroku/heroku-buildpack-php": "*",
         "nelmio/cors-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.30",
@@ -23,8 +25,6 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "heroku/heroku-buildpack-php": "*",
-        "symfony/dotenv": "5.2.*"
     },
     "config": {
         "optimize-autoloader": true,
